@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<layout x="0" y="0" w="800" h="600" state="6"></layout>
